--- a/mysite/.env
+++ b/mysite/.env
@@ -4,3 +4,7 @@
 'POSTGRES_PASSWORD': 'aNrMZi1zgf657iyq5bZs',
 'PGHOST': 'containers-us-west-47.railway.app',
 'PGPORT': 6815,
+'EMAIL_FROM' = 'benjaminduffield1997@gmail.com',
+'EMAIL_HOST_USER' = 'benjaminduffield1997@gmail.com',
+'EMAIL_HOST_PASSWORD' = 'pnlwaqwvlydrlyqx',
+'EMAIL_PORT' = 587,
